# opty-func

./: CMakeLists.txt  LICENSE  README  README.md  run
binding_go/src/binding/: binding.go
binding_java/: Binding.c  Binding.h
binding_py/: binding.py
src/binding_py/: binding.py
src/example_c/: calling_c_lib_from_another_dir  example.c  run
src/example_go/: example.go  run
src/example_java/: Binding.java  run
src/example_nodejs/: example.js  package.json
src/example_nodejs/webpage/: client.js  opt_funcs.html  package.json  server.js  style.css
src/example_py/: example.py  run
src/test/: test.c
src/test_funcs_lib/: CMakeLists.txt  test_funcs_optimize.c  test_funcs_optimize.h
